# SFTPExchange

./: README.md  settings.gradle
AndroidCryptoApp/: README.md  settings.gradle
AndroidCryptoApp/app/: build.gradle
AndroidCryptoApp/app/src/main/: AndroidManifest.xml
AndroidCryptoJNIApp/: README.md  settings.gradle
AndroidCryptoJNIApp/app/: build.gradle
AndroidCryptoJNIApp/app/src/main/: AndroidManifest.xml
ChatApp/: CMakeLists.txt  README.md  conanfile.txt
ChatApp/examples/: example_main.cpp
ChatApp/include/: chat_client.h  chat_server.h
ChatApp/src/: chat_client.cpp  chat_server.cpp
ChatApp/tests/: test_client.cpp  test_server.cpp
FaceTiltWarningApp/: .gitignore  README.md  settings.gradle
FaceTiltWarningApp/app/: build.gradle
GraphAlgoVisualizer/: README.md  settings.gradle
GraphAlgoVisualizer/app/: build.gradle
MediaStreamApp/: README.md  settings.gradle
MediaStreamApp/app/: build.gradle
NetScannerApp/: README.md  settings.gradle
NetScannerApp/app/: build.gradle
PasswordStrengthApp/: README.md  settings.gradle
PasswordStrengthApp/app/: build.gradle
ProfileWebsite/src/: style.css
ProfileWebsite/src/components/: .Experience.jsx.swp  App.jsx  DarkModeToggle.jsx  Experience.jsx  Projects.jsx
VlcPopupStreamApp/: README.md  build.gradle  settings.gradle
VlcPopupStreamApp/app/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
conanDemo/: CMakeLists.txt  README.md
conanDemo/include/: factorial.h
conanDemo/src/: factorial.cpp  main.cpp
gradle/wrapper/: gradle-wrapper.properties
(+56 files in other folders)
